# esp32-rust-example

./: Cargo.toml  README.md  build.rs  diagram.json  example.env  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: display.rs  lib.rs  main.rs  server.rs  wifi.rs
