[package]
name = "esp32-rust-example"
version = "0.1.0"
authors = ["Christian M <chriamue@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]


[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native", "v2"]
v2 = []
v3 = []

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http1", "json"] }
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43.0"
embedded-svc = { version = "0.27", features = ["experimental"] }
embedded-hal = "1.0"
embedded-graphics = "0.8.1"

futures = "0.3"
log = { version = "0.4", default-features = false }
mio = { version = "0.8", features = ["log"] }
serde = "1"
ssd1306 = "0.8.4"
stm32f1xx-hal = { version = "0.10.0", features = [ "rt", "stm32f103" ] }
tokio = { version = "1", features = ["rt", "net", "io-util"] }
tower-http = { version = "0" }

[build-dependencies]
anyhow = "1"
dotenv = "0.15.0"
embuild = "0.31.3"

[dev-dependencies]
hyper-util = { version = "0.1", features = ["http1"] }
tower = { version = "0.4", features = ["util"] }
